# query-agent

./: .gitignore  ENV_SETUP.md  QUICKTEST.md  README.md  config.yaml  example.env  improvements.md  metadata.md  pipeline_flow.html  pyproject.toml  test_metadata.xlsx  visualize_graph.py
docs/: README.md
sample_queries/: q01_simple_select_star.sql  q02_clean_simple.sql  q03_pii_unmasked.sql  q04_non_sargable_predicate.sql  q05_missing_partition_filter.sql  q06_order_by_no_limit.sql  q07_implicit_cross_join.sql  q08_join_with_partition.sql  q09_cte_multi_join.sql  q10_complex_multi_issue.sql
sample_queries/v2/: q01_select_star.sql  q02_clean_query.sql  q03_pii_exposed.sql  q04_non_sargable.sql  q05_missing_partition_filter.sql  q06_order_by_no_limit_pii.sql  q07_implicit_cross_join.sql  q08_join_pii_exposed.sql  q09_cte_missing_filter.sql  q10_complex_multi_issue.sql
sample_queries/v3/: q01_redundant_cte.sql  q02_correlated_subquery.sql  q03_union_dedup_cost.sql  q04_having_vs_where.sql  q05_self_join_pivot.sql  q06_redundant_distinct.sql
src/: cli.py  config.py
src/agent/: graph.py  nodes.py  state.py  tools.py
src/agent/prompts/: analyzer_system.md  rewrite_system.md
src/analysis/: explain.py  linter.py  parser.py
src/ingestion/: excel_loader.py  stats_collector.py
src/report/: schema.py
src/validation/: plan_diff.py
tests/: README.md  conftest.py  inspect_duckdb.py  test_linter.py  test_parser.py  test_plan_diff.py
tests/fixtures/: labeled_queries.yaml
